# erp-benchmark-workspace

./: .env.platform.example  .gitignore  README.md  pyproject.toml  registry.yaml
custom_erp_foundation_benchmark/: README.md
docs/: hstar_bench_erp.md  platform_access.md
erp_spatial_benchmark/: APPENDIX_TASK_TABLE.md  DESIGN.md  README.md  ROTATION_PROTOCOL.md  build_benchmark.py  evaluate_predictions.py  rotation_protocol.py
examples/: hstar_erp_initial_action_manifest.jsonl  hstar_erp_initial_action_predictions.jsonl  hstar_erp_manifest.jsonl  hstar_erp_predictions.jsonl  hstar_erp_submit_manifest.jsonl  hstar_erp_submit_predictions.jsonl
qwen_mlx/: pyproject.toml  worker.py
scripts/: _bootstrap.py  _rewrite_task_question_templates.py  bootstrap_sources.sh  build_seam_continuity_benchmark.py  check_platform_access.sh  create_smoke_subsets.py  download_hf_dataset.py  download_model.py  download_panoramax.py  enable_proxy.sh  filter_panoramax_manifest.py  harden_observer_distance_choice.py  login_platforms.sh  predict_benchmark.py  prepare_benchmarks.py  prepare_hstar_protocols.py  prune_benchmark_jsonl.py  rewrite_absolute_direction_prompts.py  rewrite_observer_distance_choice_prompts.py  rewrite_polar_shape_visual_prompt.py  rewrite_relative_3d_position_prompts.py  rewrite_relative_direction_prompts.py  run_benchmark.py  run_suite.py  select_benchmark_subset.py
templates/: predictions_hstar_erp.jsonl  predictions_hstar_erp_initial_action_smoke_template.jsonl  predictions_hstar_erp_rotated_submit_smoke_template.jsonl  predictions_localization.jsonl  (+9 more)
(+61 files in other folders)
