[project]
name = "erp-benchmark-workspace"
version = "0.1.0"
description = "Unified ERP and 360 benchmark helpers"
requires-python = ">=3.9,<3.10"
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=3.3.0",
  "huggingface_hub>=0.34.0,<1.0.0",
  "modelscope>=1.35.0",
  "opencv-python>=4.12.0.88",
  "openai>=1.0.0",
  "pandas>=2.2.0",
  "packaging>=24.0",
  "pillow>=11.0.0",
  "requests>=2.32.0",
  "transformers>=4.57.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/erp_benchmarks"]
